# HexRingCalibrationTarget

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: fetchcontent.cmake  openmp.cmake  options.cmake  sanitizers.cmake
configs/: board-circle.json  board-hex.json  board-rect.json
datasets/stereo/v1/: board.json
src/: CMakeLists.txt  board.cpp  board.hpp  board_drawing.cpp  board_drawing.hpp  calibration.cpp  calibration.hpp  constants.hpp  main.cpp  transform.hpp
src/cmd_launcher/: CMakeLists.txt  cmd_launcher.hpp  subcommand.cpp  subcommand.hpp
src/identification/: identification.hpp  ordering.hpp
src/identification/board_circle/: identification_circle.cpp  identification_circle.hpp
src/identification/board_hex/: filtering.cpp  filtering.hpp  identification_hex.cpp  ordering_hex.cpp
src/identification/board_rect/: filtering_rect.cpp  filtering_rect.hpp  identification_rect.cpp  ordering_rect.cpp
src/initial_calibration/: debug.cpp  debug.hpp  precalibration.cpp  precalibration.hpp
src/io/: CMakeLists.txt  board_params_io.cpp  board_params_io.hpp  debug.cpp  debug.hpp  images_set.cpp  images_set.hpp  save_path.cpp  save_path.hpp
src/marker/: debug.cpp  debug.hpp  debugging.hpp  detection.cpp  detection.hpp  detection_parameters.cpp  detection_parameters.hpp  knn.cpp  knn.hpp  symmetries.cpp  symmetries.hpp  thresholds.cpp  thresholds.hpp
src/subcommands/: calibrate_mono.cpp  calibrate_mono.hpp  draw_board.cpp  draw_board.hpp
